# cariq_ui-lvgl

./: CMakeLists.txt  README.md  conanfile.py
src/: lv_conf.h  main.cpp
